# gallery-organizer

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-0278b2da56bcaa275ce5cd86db3c30b5736d1065ae26e337d267d7153ce0bc6c.json  query-056be1c343300c2314b94bf85ec2f280bd66c59e2d7d2745199222fe44b8068c.json  query-11ee17c412de9984a3a184769252f182ea20583245b1c5e0e8634f0b561614a7.json  query-142fdea59c4f64a2bc22c659cbe1e356ee2e6882bf36515f94ca76a9cf4ed103.json  query-16399da14221d1e6650365a952a7e0efc64b9c80f0da8645d9b681870d1d0428.json  query-1b62a544039dcc9c97eec0ccee3b3a02584fed507ef240934083916efac8f9b1.json  query-2434f803dd15e0f8f8476f3f4638275b0231d8088ef5221f2dacf188208fed00.json  query-247b72682934b797d489d38a0488a8d1aa9bbaa25d42b91ea3313ecf8097ddec.json  query-26643f20e20188471dfd673fbe27b114a8b76a4ba460aa9206ab5f703583bfdc.json  query-35b80fba81e93e5a4878f95a34ac9bd4cabb0c3362d784fae879c88a2866ca55.json  query-3ee854f76ed638bfc138ef4a46afea5d9ef223d8f170f44000bc69bd3378140e.json  query-40d0bd4698c0e5c808c322d439cecd48f30ea2e7de6bf24acd1aea415fcdd816.json  query-455465770154e67a477bf636ad83e6cb041ae23de9df3c2cdb86e477589f28bb.json  query-46ec7e0a75f00b1e578f29e24540f94c40ead78c63f115057607f1acff9dea7b.json  query-4c0dcbfd801b22ce42c49141e6b2ace3ea99eb2be0889f75036a9f219300f7a1.json  query-4f0e2bd9bd229cc8e2cd16c5a24bcac2751411eeb5b9c94787c5a72e2f72a793.json  query-6071db9da875ea85125f1cd415f669073a5d06114acdbeb31413dc59aa3fd14b.json  (+19 more)
src-tauri/capabilities/: default.json
(+40 files in other folders)
